--- a/v1/Tripperv1/createIt.html
+++ b/v1/Tripperv1/createIt.html
@@ -19,11 +19,9 @@
 
 <div id="map"></div>
 <div class="button-container">
-   <!-- <button id="itinerary">Crea un itinerario</button>-->
-    <button>Eventi</button>
-    <button>Monumenti</button><br>
+   <button id="itinerary">Crea un itinerario</button>
 </div>
-<button>Ristoranti</button>
+
 
 <script src="js/button.js"></script>
 <script src="js/map.js"></script>
