--- a/Tripperv1/index.html
+++ b/Tripperv1/index.html
@@ -21,7 +21,7 @@
             <input type="text" id="dateRange" readonly>
         </form>
 
-        <script src="js/selectCalendar.js"></script>
+        <script type="module" src="js/selectCalendar.js"></script>
     </div>
 </body>
 </html>
