--- a/Tripperv1/createIt.html
+++ b/Tripperv1/createIt.html
@@ -23,7 +23,7 @@
 </div>
 
 
-<script src="js/button.js"></script>
+<script type="module" src="js/button.js"></script>
 <script src="js/map.js"></script>
 </body>
 </html>
