--- a/Tripperv1.2/newItinerary.html
+++ b/Tripperv1.2/newItinerary.html
@@ -20,8 +20,10 @@
 
     <div id="itineraryContainer">
         <div id="map"></div>
-        <div id="itineraryAccordion">IL TUO ITINERARIO</div>
-    </div>
+            <div id="itineraryAccordion">YOUR ITINERARY</div>
+        </div>
+
+
 
 
 
