--- a/Tripperv1.2.5/newItinerary.html
+++ b/Tripperv1.2.5/newItinerary.html
@@ -20,7 +20,8 @@
 
     <div id="itineraryContainer">
         <div id="map"></div>
-            <div id="itineraryAccordion">YOUR ITINERARY</div>
+        <div>DA VISITARE</div>
+        <div id="itineraryAccordion">YOUR ITINERARY</div>
     </div>
     <div>prova</div>
 
